<resources>
    <string name="app_name">Guia Turístico</string>
    <string name="action_settings">Settings</string>
    <string name="bh">Belo Horizonte</string>
    <string name="txtBH1">Uma cidade imaginada e tecida em meio às suaves montanhas centrais de Minas Gerais. A importação de projetos arquitetônicos franceses na virada para o séc.XX, somada à modernidade de Niemeyer da década de 1940, marcaram o nascimento de uma nova concepção urbanística no Brasil. Jovial e tradicional, aristocrática e popular, clássica e moderna. Assim é a capital, cuja qualidade de vida é exemplo reconhecido inclusive pela ONU. \n
		Belo Horizonte seduz turistas com seu exuberante cenário e enorme potencial para a cultura e negócios. Sedia eventos de importância internacional, destacando-se como um dos maiores centros industriais da América Latina. A sólida tradição cultural da cidade também a transforma em um interessante centro catalisador das artes. Em Belo Horizonte lazer e negócios estão na medida certa.</string>
    <string name="txtBH2">Mas o terceiro centro industrial do país não atrai turistas somente a negócios. O lazer, a cultura e o espírito mineiro se abraçam e pulsam na capital. Não é para menos: a cidade está estrategicamente localizada na porção central do Estado. O clima agradável, belas paisagens, a arquitetura eclética e a proximidade com importantes cidades turísticas mineiras completam o amplo mosaico oferecido. Ouro Preto, Mariana, Sabará, Congonhas e Caeté dão uma idéia de quão rico pode ser um passeio a Belo Horizonte. \n
		História, folclore e tradições mineiras à parte, Belo Horizonte criou também uma identidade própria, cosmopolita e rica em alternativas de lazer, dignas de uma metrópole. Considerada a cidade brasileira com maior número de bares por habitante, sua noite oferece opções para os mais variados estilos, seja a badalação ou a gastronomia de qualidade internacional. O grande número de festivais de dança, teatro, circo, além das freqüentes exposições, transformam Beagá, como é chamada por seus moradores, em um coquetel cultural. Desista de desvendá-la totalmente em uma única visita. É preciso voltar, voltar, voltar sempre à Belo Horizonte! \n
		Os engenheiros responsáveis pelo projeto da cidade previam que, ao completar 100 anos, Belo Horizonte teria uma população de 200 mil habitantes. Hoje, passado o centenário de sua fundação, Beagá possui mais de dois milhões.</string>
    <string name="ct">Curitiba</string>
    <string name="txtCT1">Curitiba é a capital do Estado do Paraná, localizada a 934 metros de altitude no primeiro planalto paranaense, a aproximadamente 110 quilômetros do Oceano Atlântico. É a oitava cidade mais populosa do Brasil e a maior do sul do país, com uma população de 1.746.896 habitantes, fundada oficialmente na data de 29 de março de 1693. Inicialmente chamada de Vila de Nossa Senhora da Luz dos Pinhais, passando a se chamar Curitiba em 1721, e já nesta época a preocupação com a natureza e o meio ambiente era determinante pelo então ouvidor Raphael Pires Coutinho, iniciando uma tradição da qual Curitiba é hoje reconhecida internacionalmente.</string>
    <string name="txtCT2">A capital do Paraná ao longo dos últimos anos tem se consolidado como a cidade mais rica do Sul do país e a 4ª em nível nacional.</string>
    <string name="txtCT3">Com 320 anos, Curitiba administrada pelo Prefeito Gustavo Fruet, tem um dos melhores índices de áreas verdes do País: 52 m² por habitante. Curitiba  a cada ano que passa continua sendo a cidade modelo, a cidade sorriso, a cidade da biodiversidade a cidade verde. \n
		Curitiba reúne hoje vários motivos para se apaixonar. As etnias, as tradições, os costumes, o lazer e entretenimento, os parques, as praças, os bosques, os memoriais, além da gastronomia é claro, restaurantes e bares com suas culinárias típicas do povo que fizeram e fazem Curitiba, uma cidade agradável, charmosa e acolhedora.</string>
    <string name="pa">Porto Alegre</string>
    <string name="txtPA1">Um conjunto de múltiplas expressões, de variadas faces, origens étnicas e religiosas faz de Porto Alegre um raro espaço onde os contrastes e a diferença são bem acolhidos e sempre bem-vindos. \n
        A cidade foi fundada em 1772 por casais portugueses açorianos. Ao longo dos séculos seguintes, acolheu imigrantes de todo mundo, em particular alemães, italianos, espanhóis, africanos, poloneses e libaneses, entre católicos, judeus, protestantes e muçulmanos.</string>
    <string name="txtPA2">Porto Alegre, multicultural por natureza.</string>
    <string name="txtPA3">Assim é Porto Alegre, multicultural por natureza, terra de grandes escritores, intelectuais, artistas e políticos que marcaram a história do Brasil. A cidade, que é capaz de produzir e sediar eventos de grande porte, com expressão nacional e internacional, é também a capital que projetou do Estado do Rio Grande do Sul para o mundo jogadores de futebol como Ronaldinho e Pato, campeões olímpicos como Daiane dos Santos e João Derly, e celebridades como a übermodel Gisele Bündchen. \n
		Portão de entrada de turistas no Estado e a apenas 120 quilômetros da aprazível Serra Gaúcha, Porto Alegre é um movimentado pólo de serviços e de infraestrutura de qualidade reconhecidas, base de grandes empresas nacionais e internacionais e um dos principais destinos de eventos internacionais no Brasil.</string>
    <string name="re">Recife</string>
    <string name="txtRE1">O Recife ostenta cenários de rara beleza, com rios, praias, áreas verdes, construções históricas, e ainda é dono de uma forte efervescência cultural. O clima na região é sempre agradável. Temperatura média de 25°C, podendo chegar a 35°C, durante o verão. São muitos os encantos que atraem milhares de turistas por ano e esse número só tende a crescer, pois a cidade será uma das sedes da Copa do Mundo de 2014. \n
		Conhecida por “Veneza brasileira”, a cidade é cortada por rios e pontes, formando ilhas como a de Santo Antonio, São José e a do Bairro do Recife. Estas regiões são marcadas pelo requinte de antigos casarios, igrejas e construções. Um verdadeiro museu a céu aberto. O litoral é outro cartão-postal imperdível do município, com uma orla de aproximadamente 8 km, águas mornas e claras, e uma extensa faixa de arrecifes.</string>
    <string name="txtRE2">Para receber bem seus visitantes, o município conta com um know-how na área de turismo e hotelaria. Também já está se preparando para o aumento no número de turistas devido à realização do Mundial de Futebol. \n
		Além da organização para a Copa de 2014, os investimentos da Prefeitura estão equipando a cidade para o seu crescimento econômico e mudando para melhor a vida dos recifenses. Uma política de desenvolvimento que tem se refletido na instalação de novas empresas, na criação de emprego, bem como em benefícios sociais para população. Obras como a implantação e reforma dos três parques do Capibaribe Melhor, os trabalhos de saneamento e a construção de habitacionais. </string>
    <string name="rj">Rio de Janeiro</string>
    <string name="txtRJ1">Principais ícones cariocas, o Cristo Redentor e o Pão de Açúcar são passeios obrigatórios para quem vem ao Rio de Janeiro. Em ambos os cartões-postais, as paisagens descortinadas mostram o porquê da cidade ter o título de “maravilhosa”. Em terra firme, construções como o Maracanã e a Cidade do Samba revelam a magia do futebol e do Carnaval. \n
		A paisagem do litoral do Rio de Janeiro é uma das mais belas do mundo. O estado possui 16 milhões de habitantes, a maior parte reside na região metropolitana da Capital.</string>
    <string name="txtRJ2">Em 2016, a Cidade do Rio sediará os Jogos Olímpicos, pela primeira vez na América do Sul.</string>
    <string name="txtRJ3">Difícil escrever sobre o Rio de Janeiro sem ser redundante. O Rio de Janeiro continua lindo, como já disse Gilberto Gil. E tem tudo para ficar ainda mais lindo. Além das belezas naturais evidentes, a cidade merece destaque em outro aspecto: sua gente. O carioca é um povo diferente. O Rio de Janeiro tem bom humor e você se sente em casa assim que pisa na terra abençoada pelo Cristo Redentor. Também, com tamanha beleza é dificil não rir a tôa e ficar de bem com a vida, já cantavam os gênios da Bossa Nova, que também teve seu nascimento nesta cidade. \n
		Além dos clássicos pontos turísticos - todos imperdíveis! -, a cidade oferece tudo que você quiser e mais um pouco. Em termos de diversão, o Rio está entre as cidades brasileiras com maior variedade de lugares e programas, sem falar do Carnaval, que é um dos principais marcos nacionais. A cidade, que já foi a capital do Brasil, hoje se prepara para ser uma das sedes da Copa do Mundo de 2014 e sede oficial dos Jogos Olímpicos de 2016. Muita coisa vai mudar por lá, e pra melhor, obviamente! </string>
    <string name="sa">Salvador</string>
    <string name="txtSA1">Segundo destino turístico mais procurado do país por estrangeiros, perdendo apenas para o Rio de Janeiro, e um dos mais visitados pelos próprios brasileiros, o que faz Salvador ser um sucesso em termos turísticos? \n
		Belas praias? Sim, mas outras cidades do país também têm. Conjunto arquitetônico colonial e marcas da história do país? Sim, mas cidades como Parati, Ouro Preto e Olinda, entre outras, também têm. Uma cultura local, com música, culinária, religião etc., altamente desenvolvida? Sim, mas São Paulo e Rio de Janeiro são exemplos de cidades com alto grau de vida cultural.</string>
	<string name="txtSA2">Então, como dizem os cidadãos de Salvador, os soteropolitanos: "sorria: você está na Bahia".</string>
   	<string name="txtSA3">A resposta, claro, é o conjunto desses elementos. Nenhuma outra cidade do Brasil reúne, em partes iguais, uma grande beleza natural, marcos da história do país e elementos culturais próprios como Salvador. É isso que a diferencia de todas as demais cidades turísticas do Brasil. \n
		O turista que escolher Salvador pode ir à praia pela manhã, fazer um passeio ao centro histórico à tarde, jantar em um dos bons restaurantes da cidade e ir dançar nos ensaios dos blocos de carnaval ou ao som dos muitos sucessos locais. \n
		Há diversão para todos os gostos e, principalmente, para todos os bolsos, já que muitas das atrações, como as praias e outros passeios, não precisam ser pagas.</string>
    <string name="sp">São Paulo</string>
    <string name="txtSP1">A capital econômica do país pode não parecer o mais evidente destino turístico. Mas há muito o que ver e fazer em São Paulo. As opções de cultura, comércio e gastronomia em Sampa se comparam às das mais concorridas metrópole internacionais. Experimente caminhar pelo coração de São Paulo, a Avenida Paulista, a Wall Street brasileira, que também é recheada de programas culturais. Dê um pulo ao Parque Trianon, escolha um cinema ou uma peça teatral e divirta-se.</string>
	<string name="txtSP2">MASP - Museu de Arte de São Paulo - abriga coleções de arte européia e brasileira.</string>
	<string name="txtSP3">O cardápio da cidade é generoso em restaurantes alemães, árabes, brasileiros, chineses, coreanos, escandinavos, franceses, gregos, indianos, japoneses, portugueses, suíços, tailandeses, vegetarianos e até judaicos. Boa parte deles está espalhada pelo eixo Itaim-Jardins, além de Higienópolis. Prefere uma pizza? Já para o Bixiga, bairro conhecido como "piccola Itália", onde você pode escolher uma entre tantas pizzarias. \n 
			Para queimar as calorias, aposte nas compras - a capital oferece opções para todos os gostos, bolsos e estilos: dos shoppings classudis e sofisticados às ruas especializadas em pechinchas, como José Paulino, 25 de Março e Santa Ifigênia. Depois, é só seguir para a fervilhante noite de São Paulo, afinal, a  cidade nunca dorme! Circule pelos bairros Cerqueira César, Jardins, Pinheiros, Vila Olímpia, Itaim e Vila Madalena onde a abundância de bares e casas noturnas atrai cada vez mais frequentadores.</string>
</resources>