<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrincipalActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="37dp" >

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnBH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bh" />

        <Button
            android:id="@+id/btnCT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ct" />

        <Button
            android:id="@+id/btnPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pa" />

        <Button
            android:id="@+id/btnRE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/re" />

        <Button
            android:id="@+id/btnRJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rj" />

        <Button
            android:id="@+id/btnSA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sa" />

        <Button
            android:id="@+id/btnSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sp" />
    </LinearLayout>

</RelativeLayout>